samples/_failures_safe/1761044664_39a83c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c60e031.c: In function ‘main’:
./samples/SAFE/__tmp_0c60e031.c:143:9: error: expected declaration or statement at end of input
  143 |         buffer_free(&decompressed_buf);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_0c60e031.c:143:9: error: expected declaration or statement at end of input
